добавлены блоки lead и intro

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -9,5 +9,8 @@
   background-color: var(--color-ground);
   color: var(--color-fill);
   display: flex;
+  flex-wrap: nowrap;
   flex-direction: column;
+  /* justify-content: center; */
+  /* align-items: center; */
 }
