--- a/blocks/header/__lang-link/_nic/header__lang-link_nic.css
+++ b/blocks/header/__lang-link/_nic/header__lang-link_nic.css
@@ -2,7 +2,7 @@
   font-weight: 400;
   font-size: 24px;
   line-height: 28px;
-  align-content: end;
+  text-align: end;
   text-decoration: none;
   color: var(--color-fill);
 }
