--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,9 @@
 .header {
   display: flex;
   flex-direction: row;
+  flex-wrap: nowrap;
+  margin: 0;
+  padding: 0;
   min-height: 52px;
   margin-top: 28px;
   margin-left: 48px;
