--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -4,5 +4,5 @@
   height: 52px;
   width: 176px;
   object-fit: cover;
-  content: url(../../../images/__logo.svg);
+  content: url(../../../images/header-logo.svg);
 }
