добавлены карточки мест

--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,6 @@
 .intro {
   display: flex;
-  max-width: 690px;
+  width: calc(100% - 590px);
   padding: 0;
   margin: 92px auto 92px 148px;
   flex-direction: column;
