--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,8 +1,6 @@
 .page {
   /* ограничения по ширине */
-  min-width: 1024px;
-  max-width: 1280px;
-  /* центрирование контента для экранов больше 1280px */
+  min-width: 1280px;
   margin: 0 auto;
   /* предпочтения по шрифтам */
   font-family: 'Inter', Arial, sans-serif;
@@ -11,6 +9,5 @@
   display: flex;
   flex-wrap: nowrap;
   flex-direction: column;
-  /* justify-content: center; */
-  /* align-items: center; */
+  cursor: default;
 }
