--- a/blocks/header/__lang-link/_nic/header__lang-link_nic.css
+++ b/blocks/header/__lang-link/_nic/header__lang-link_nic.css
@@ -1,7 +1,7 @@
 .header__lang-link_nic {
   font-weight: 400;
   font-size: 24px;
-  line-height: 28px;
+  line-height: 117%;
   text-align: end;
   text-decoration: none;
   color: var(--color-fill);
