--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,6 +5,7 @@
   margin: 0;
   padding: 0;
   min-height: 52px;
+  width: calc(100% - 96px);
   margin-top: 28px;
   margin-left: 48px;
   margin-right: 48px;
