--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -8,7 +8,7 @@
   top: calc(100% - 14px);
   font-weight: 400;
   font-size: 10px;
-  line-height: 14px;
+  line-height: 140%;
   letter-spacing: 1.5px;
   text-align: start;
 }
