--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,7 +1,7 @@
 .lead {
   display: flex;
   position: relative;
-  max-width: 984px;
+  width: calc(100% - 296px);
   padding: 0;
   margin: 56px 148px 0;
   flex-direction: column;
