добавлена cover и точки перехода до lead_subt

--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,8 +1,14 @@
 .header__logo {
   display: block;
-  padding: 0;
-  height: 52px;
+  /* padding: 0; */
   width: 176px;
+  /* width: 176px; */
   object-fit: cover;
   content: url(../../../images/header-logo.svg);
+}
+
+@media (max-width: 768px) {
+  .header__logo {
+    width: 142px;
+  }
 }
