--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -6,3 +6,11 @@
   margin-top: 18px;
   margin-bottom: 6px;
 }
+
+@media (max-width: 768px) {
+  .header__lang-link {
+    min-width: 62px;
+    margin-top: 14px;
+    margin-bottom: 8px;
+  }
+}
