--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,13 +1,17 @@
 .header {
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
   margin: 0;
   padding: 0;
-  min-height: 52px;
-  width: calc(100% - 96px);
+  max-height: 52px;
+  width: 90vw;
   margin-top: 28px;
-  margin-left: 48px;
-  margin-right: 48px;
   justify-content: space-between;
+}
+
+@media (max-width: 768px) {
+  .header {
+    max-height: 42px;
+    margin-top: 16px;
+  }
 }
