--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,9 +1,16 @@
 .lead__title {
   margin: 0;
   padding: 0;
-  max-width: 720px;
+  width: 720px;
   font-weight: 900;
   font-size: 96px;
   line-height: 104%;
   text-align: center;
+}
+
+@media (max-width: 768px) {
+  .lead__title {
+    width: 288px;
+    font-size: 40px;
+  }
 }
