--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,11 +1,22 @@
 .lead {
   display: flex;
   position: relative;
-  width: calc(100% - 296px);
+  width: calc(22vw + 702px);
   padding: 0;
-  margin: 56px 148px 0;
+  margin: 0;
+  margin-top: 56px;
   flex-direction: column;
   align-items: center;
-  /* justify-content: space-between;
-  flex-wrap: nowrap; */
+}
+
+@media (max-width: 900px) {
+  .lead {
+    width: 100vw;
+  }
+}
+
+@media (max-width: 1280px) {
+  .lead {
+    margin-top: 48px;
+  }
 }
