--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,13 +1,13 @@
 .page {
   /* ограничения по ширине */
-  min-width: 1280px;
+  min-width: 320px;
   margin: 0 auto;
   /* предпочтения по шрифтам */
   font-family: 'Inter', Arial, sans-serif;
   background-color: var(--color-ground);
   color: var(--color-fill);
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
+  align-items: center;
   cursor: default;
 }
