--- a/pages/index.css
+++ b/pages/index.css
@@ -5,7 +5,7 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
-@import url(../blocks/header/__lang-link/_nic/header__lang-link_nic.css);
+@import url(../blocks/header/__nic/header__nic.css);
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__subtitle/lead__subtile.css);
@@ -26,3 +26,10 @@
 @import url(../blocks/place/__website/place__vebsite.css);
 @import url(../blocks/place/__url-heading/place__url-heading.css);
 @import url(../blocks/place/__link/place__link.css);
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__background/cover__background.css);
+@import url(../blocks/cover/__overlay/cover__overlay.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__subtitle/cover__sibtitle.css);
+@import url(../blocks/cover/__txt/cover__txt.css);
+@import url(../blocks/footer/footer.css);
