--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,11 +1,26 @@
 .intro {
   display: flex;
-  width: calc(100% - 590px);
+  min-height: 429px;
+  max-width: 690px;
   padding: 0;
-  margin: 92px auto 92px 148px;
+
+  margin: 92px auto 92px calc((78vw - 702px)/2);
   flex-direction: column;
   align-items: start;
-  /* align-self: flex-start; */
-  /* justify-content: space-between;
-  flex-wrap: nowrap; */
+  align-self: flex-start;
+}
+
+@media (max-width: 1024px) {
+  .intro {
+    max-width: 90vw;
+    min-height: auto;
+    margin: 88px auto;
+    align-self: center;
+  }
+}
+
+@media (max-width: 768px) {
+  .intro {
+    margin: 64px auto;
+  }
 }
