--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -12,3 +12,17 @@
   letter-spacing: 1.5px;
   text-align: start;
 }
+
+@media (max-width: 1024px) {
+  .lead__caption {
+    margin-left: 24px;
+    margin-bottom: 40px;
+  }
+}
+
+@media (max-width: 768px) {
+  .lead__caption {
+    font-size: 10px;
+    margin-left: 16px;
+  }
+}
