--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,7 +1,7 @@
 .photo-grid__item {
-  margin: 0;
-  padding: 0;
+  display: block;
   width: 100%;
-  /* padding-bottom: 100%; */
+  aspect-ratio: 4/3;
+  object-position: top left;
   object-fit: cover;
 }
