--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,7 +1,7 @@
 .place__image {
-  margin: 0;
-  padding: 0;
+  display: block;
   width: 100%;
-  padding-right: 100%;
+  aspect-ratio: 1/1;
+  object-position: top left;
   object-fit: cover;
 }
