--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -12,3 +12,10 @@
   opacity: 0.8;
   /* cursor: pointer; */
 }
+
+@media (max-width: 768px) {
+  .place__link {
+    width: calc(100% - 32px);
+    margin-left: 16px;
+  }
+}
