--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,7 +1,7 @@
 .place__paragraph {
   margin: 0;
   padding: 0;
-  margin-bottom: 26px;
+  margin-bottom: 25px;
   width: 100%;
   font-weight: 400;
   font-size: 18px;
@@ -11,4 +11,12 @@
 
 .place__paragraph:last-child {
   margin-bottom: 0;
+}
+
+@media (max-width: 768px) {
+  .place__paragraph {
+    width: calc(100% - 32px);
+    margin-left: 16px;
+    font-size: 16px;
+  }
 }
