--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -4,6 +4,27 @@
   width: 100%;
   font-weight: 900;
   font-size: 72px;
-  line-height: 76px;
+  line-height: 106%;
   text-align: start;
+}
+
+@media (max-width: 1024px) {
+  .place__title {
+    font-size: 42px;
+    line-height: 110%;
+  }
+}
+
+@media (max-width: 1024px) {
+  .place__title {
+    font-size: 32px;
+    line-height: 109%;
+  }
+}
+
+@media (max-width: 768px) {
+  .place__title {
+    width: calc(100% - 32px);
+    margin-left: 16px;
+  }
 }
