--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 47% auto;
   grid-template-rows: auto auto;
-  column-gap: 40px;
+  column-gap: 4%;
   row-gap: 48px;
   width: 100%;
   padding: 0;
@@ -12,4 +12,19 @@
 
 .place:last-child {
   margin-bottom: 0;
+}
+
+@media (max-width: 1024px) {
+  .place {
+    margin-bottom: 73px;
+  }
+}
+
+@media (max-width: 786px) {
+  .place {
+    margin-bottom: 50px;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, auto);
+    row-gap: 32px;
+  }
 }
