--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,8 +1,28 @@
 .places {
   display: flex;
-  width: calc(100% - 296px);
+  width: calc(22vw + 702px);
   padding: 0;
-  margin: 92px 148px;
+  margin: 92px auto;
   flex-direction: column;
   align-items: center;
+}
+
+@media (max-width: 1024px) {
+  .places {
+    width: 92vw;
+    margin: 88px auto;
+  }
+}
+
+/* @media (max-width: 900px) {
+  .places {
+    width: 100vw;
+  }
+} */
+
+@media (max-width: 768px) {
+  .places {
+    width: 100vw;
+    margin-top: 65px auto;
+  }
 }
