--- a/blocks/cover/__subtitle/cover__sibtitle.css
+++ b/blocks/cover/__subtitle/cover__sibtitle.css
@@ -1,10 +1,20 @@
 .cover__subtitle {
   margin: 0;
   padding: 0;
-  width: calc(100% - 824px);
-  margin-left: 412px;
+  width: 360px;
+  min-height: 66px;
+
   font-weight: 400;
   font-size: 18px;
   line-height: 122%;
   text-align: center;
+}
+
+@media (max-width: 768px) {
+  .cover__subtitle {
+    width: 288px;
+    min-height: 48px;
+    font-size: 14px;
+    line-height: 114%;
+  }
 }
