--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,11 +1,21 @@
 .cover__title {
   margin: 0;
   padding: 0;
-  width: calc(100% - 624px);
-  margin-left: 312px;
+  width: 560px;
+  min-height: 152px;
   margin-bottom: 32px;
   font-weight: 900;
   font-size: 72px;
   line-height: 106%;
   text-align: center;
+}
+
+@media (max-width: 768px) {
+  .cover__title {
+    width: 288px;
+    min-height: 70px;
+    margin-bottom: 16px;
+    font-size: 32px;
+    line-height: 109%;
+  }
 }
