--- a/blocks/cover/__txt/cover__txt.css
+++ b/blocks/cover/__txt/cover__txt.css
@@ -1,15 +1,17 @@
 .cover__txt {
+  display: flex;
   /* margin: 0;
   padding: 0; */
-  display: block;
+  flex-direction: column;
   grid-column: 1/2;
   grid-row: 1/2;
 
-  width: 100%;
+  /* width: 100%; */
+
   /* align-items: center;
   justify-items: center; */
   align-self: center;
   justify-self: center;
-
+  align-items: center;
   z-index: 2;
 }
