--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,8 +2,28 @@
   display: flex;
   flex-direction: row;
   padding: 0;
-  min-height: 18px;
-  width: calc(100% - 96px);
-  margin: 92px 48px 24px;
+  margin: 0;
+  max-height: 18px;
+  width: 90vw;
+  margin-top: 92px;
+  margin-bottom: 24px;
   justify-content: space-between;
+}
+
+@media (max-width: 1024px) {
+  .footer {
+    margin-top: 88px;
+  }
+}
+
+@media (max-width: 768px) {
+  .footer {
+    max-height: fit-content;
+    width: fit-content;
+    flex-direction: column;
+    margin-top: 64px;
+    margin-left: 16px;
+    align-self: flex-start;
+    align-items: flex-start;
+  }
 }
