--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,7 +3,7 @@
   min-width: 320px;
   margin: 0 auto;
   /* предпочтения по шрифтам */
-  font-family: 'Inter', Arial, sans-serif;
+  font-family: Inter, Arial, sans-serif;
   background-color: var(--color-ground);
   color: var(--color-fill);
   display: flex;
