--- a/pages/index.css
+++ b/pages/index.css
@@ -33,3 +33,6 @@
 @import url(../blocks/cover/__subtitle/cover__sibtitle.css);
 @import url(../blocks/cover/__txt/cover__txt.css);
 @import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__links/footer__links.css);
+@import url(../blocks/footer/__link/footer_link.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
