--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,28 +1,23 @@
 .lead__caption {
-  position: absolute;
   margin: 0;
   padding: 0;
-  width: 158px;
-  height: 14px;
-  left: 0;
-  top: calc(100% - 14px);
+  max-height: 14px;
   font-weight: 400;
   font-size: 10px;
   line-height: 140%;
   letter-spacing: 1.5px;
+  align-self: flex-start;
   text-align: start;
 }
 
 @media (max-width: 1024px) {
   .lead__caption {
     margin-left: 24px;
-    margin-bottom: 40px;
   }
 }
 
 @media (max-width: 768px) {
   .lead__caption {
-    font-size: 10px;
     margin-left: 16px;
   }
 }
