--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,7 +1,28 @@
 .cover__overlay {
-  grid-column: 1/2;
-  grid-row: 1/2;
-  z-index: 1;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: var(--color-fill);
+  /* z-index: 10; */
+
+  background-image: url(../../../images/cover-trains.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.cover__overlay::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
   height: 100%;
   width: 100%;
   background-color: var(--color-ground);
@@ -9,7 +30,7 @@
   transition: opacity 0.5s linear;
 }
 
-.cover__overlay:hover {
+.cover__overlay:hover::before {
   cursor: pointer;
   opacity: 0.8;
 }
