--- a/blocks/cover/__subtitle/cover__sibtitle.css
+++ b/blocks/cover/__subtitle/cover__sibtitle.css
@@ -3,18 +3,20 @@
   padding: 0;
   width: 360px;
   min-height: 66px;
-
+  margin-top: 32px;
   font-weight: 400;
   font-size: 18px;
   line-height: 122%;
   text-align: center;
+  z-index: 1;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .cover__subtitle {
     width: 288px;
     min-height: 48px;
     font-size: 14px;
     line-height: 114%;
+    margin-top: 16px;
   }
 }
