--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -2,19 +2,16 @@
   margin: 0;
   padding: 0;
   width: 560px;
-  min-height: 152px;
-  margin-bottom: 32px;
   font-weight: 900;
   font-size: 72px;
   line-height: 106%;
   text-align: center;
+  z-index: 1;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .cover__title {
     width: 288px;
-    min-height: 70px;
-    margin-bottom: 16px;
     font-size: 32px;
     line-height: 109%;
   }
