--- a/blocks/cover/__subtitle/cover__sibtitle.css
+++ b/blocks/cover/__subtitle/cover__sibtitle.css
@@ -1,7 +1,7 @@
 .cover__subtitle {
   margin: 0;
   padding: 0;
-  width: 360px;
+  max-width: 360px;
   min-height: 66px;
   margin-top: 32px;
   font-weight: 400;
@@ -13,7 +13,7 @@
 
 @media (max-width: 767px) {
   .cover__subtitle {
-    width: 288px;
+    max-width: 288px;
     min-height: 48px;
     font-size: 14px;
     line-height: 114%;
