--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,4 +1,6 @@
 .footer__link {
+  margin: 0;
+  padding: 0;
   font-weight: 400;
   font-size: 16px;
   line-height: 112%;
@@ -20,7 +22,6 @@
 @media (max-width: 767px) {
   .footer__link {
     margin-bottom: 32px;
-    flex-direction: column;
     font-weight: 400;
     font-size: 24px;
     line-height: 100%;
