--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,15 +3,20 @@
   flex-direction: row;
   padding: 0;
   margin: 0;
-  max-height: 18px;
-  width: 92vw;
+  width: 100%;
   margin-top: 92px;
-  margin-bottom: 24px;
   justify-content: space-between;
+}
+
+@media (max-width: 1279px) {
+  .footer {
+    width: calc(100% - 96px);
+  }
 }
 
 @media (max-width: 1023px) {
   .footer {
+    width: calc(100% - 48px);
     margin-top: 88px;
   }
 }
