--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,7 +1,6 @@
 .header__lang-link {
   display: flex;
-  justify-content: space-between;
-  min-width: 78px;
+  max-width: 78px;
   padding: 0;
   margin-top: 18px;
   margin-bottom: 6px;
@@ -9,7 +8,7 @@
 
 @media (max-width: 767px) {
   .header__lang-link {
-    min-width: 62px;
+    max-width: 62px;
     margin-top: 14px;
     margin-bottom: 8px;
   }
