--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,15 +3,31 @@
   flex-direction: row;
   margin: 0;
   padding: 0;
-  max-height: 52px;
-  width: 92vw;
-  margin-top: 28px;
+  width: calc(100% - 96px);
+  margin-bottom: 56px;
   justify-content: space-between;
+}
+
+@media (max-width: 1279px) {
+  .header {
+    margin-bottom: 48px;
+  }
+}
+
+@media (max-width: 1023px) {
+  .header {
+    width: calc(100% - 48px);
+  }
+}
+
+@media (max-width: 1023px) {
+  .header {
+    width: calc(100% - 96px);
+  }
 }
 
 @media (max-width: 767px) {
   .header {
-    max-height: 42px;
-    margin-top: 16px;
+    width: calc(100% - 32px);
   }
 }
