--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,26 +1,23 @@
 .intro {
   display: flex;
-  min-height: 429px;
   max-width: 690px;
   padding: 0;
-
-  margin: 92px auto 92px calc((78vw - 702px)/2);
+  margin: 0;
+  margin: 92px auto 92px 100px;
   flex-direction: column;
   align-items: start;
-  align-self: flex-start;
 }
 
 @media (max-width: 1023px) {
   .intro {
-    max-width: 92vw;
-    min-height: auto;
-    margin: 88px auto;
-    align-self: center;
+    max-width: calc(100% - 48px);
+    margin: 88px 24px;
   }
 }
 
 @media (max-width: 767px) {
   .intro {
-    margin: 64px auto;
+    max-width: calc(100% - 32px);
+    margin: 64px 16px;
   }
 }
