--- a/blocks/lead/__subtitle/lead__subtile.css
+++ b/blocks/lead/__subtitle/lead__subtile.css
@@ -18,7 +18,7 @@
 
 @media (max-width: 767px) {
   .lead__subtitle {
-    width: 288px;
+    max-width: 288px;
     font-size: 16px;
     margin-top: 16px;
     margin-bottom: 40px;
