--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,7 +1,7 @@
 .lead__title {
   margin: 0;
   padding: 0;
-  width: 720px;
+  max-width: 720px;
   font-weight: 900;
   font-size: 96px;
   line-height: 104%;
