--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,22 +1,20 @@
 .lead {
   display: flex;
-  position: relative;
-  width: calc(22vw + 702px);
+  max-width: 984px;
   padding: 0;
   margin: 0;
-  margin-top: 56px;
   flex-direction: column;
   align-items: center;
 }
 
 @media (max-width: 1279px) {
   .lead {
-    margin-top: 48px;
+    max-width: 928px;
   }
 }
 
-@media (max-width: 899px) {
+@media (max-width: 1023px) {
   .lead {
-    width: 100vw;
+    max-width: 100%;
   }
 }
