--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,13 +1,15 @@
 .page {
   /* ограничения по ширине */
   min-width: 320px;
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
+  /* margin: 0 auto; */
   /* предпочтения по шрифтам */
-  font-family: Inter, Arial, sans-serif;
+  font-family: Inter;
   background-color: var(--color-ground);
   color: var(--color-fill);
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
   cursor: default;
 }
