--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   max-width: 720px;
+
   font-weight: 900;
   font-size: 96px;
   line-height: 104%;
@@ -10,7 +11,8 @@
 
 @media (max-width: 767px) {
   .lead__title {
-    width: 288px;
+    max-width: 288px;
+
     font-size: 40px;
   }
 }
