--- a/blocks/place/__website/place__vebsite.css
+++ b/blocks/place/__website/place__vebsite.css
@@ -1,9 +1,14 @@
 .place__vebsite {
   display: flex;
   flex-direction: column;
-  flex-wrap: nowrap;
   padding: 0;
   margin: 0;
   margin-right: 28px;
   align-self: end;
+}
+
+@media (max-width: 1279px) {
+  .place__vebsite {
+    margin-right: 0;
+  }
 }
