--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,7 +1,7 @@
 .content {
   display: flex;
   padding: 0;
-  margin: 28px auto 24px;
+  margin: 0 auto;
   flex-direction: column;
   align-items: center;
   max-width: 1184px;
@@ -10,11 +10,5 @@
 @media (max-width: 1279px) {
   .content {
     max-width: 100vw;
-  }
-}
-
-@media (max-width: 767px) {
-  .content {
-    margin-top: 16px;
   }
 }
