--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,21 +2,20 @@
   display: flex;
   flex-direction: row;
   padding: 0;
-  margin: 0;
-  width: 100%;
-  margin-top: 92px;
+  margin: 92px auto 24px;
+  max-width: 1184px;
   justify-content: space-between;
 }
 
 @media (max-width: 1279px) {
   .footer {
-    width: calc(100% - 96px);
+    max-width: 928px;
   }
 }
 
 @media (max-width: 1023px) {
   .footer {
-    width: calc(100% - 48px);
+    max-width: 720px;
     margin-top: 88px;
   }
 }
