--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,11 +1,11 @@
 .photo-grid {
   display: grid;
-  width: 100%;
+  max-width: 100%;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(3, 1fr);
   grid-gap: 16px;
   padding: 0;
-  margin: 0 auto;
+  margin: 0;
 }
 
 @media (max-width: 1279px) {
@@ -13,6 +13,8 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
     grid-gap: 14px;
+    margin-left: 48px;
+    margin-right: 48px;
   }
 }
 
@@ -21,6 +23,8 @@
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(6, 1fr);
     grid-gap: 16px;
+    margin-left: 24px;
+    margin-right: 24px;
   }
 }
 
@@ -29,5 +33,7 @@
     grid-template-columns: 1fr;
     grid-template-rows: repeat(12, 1fr);
     grid-gap: 12px;
+    margin-left: 16px;
+    margin-right: 16px;
   }
 }
