--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -13,10 +13,15 @@
   margin-bottom: 0;
 }
 
+@media (max-width: 1023px) {
+  .place__paragraph {
+    font-size: 16px;
+  }
+}
+
 @media (max-width: 767px) {
   .place__paragraph {
     width: calc(100% - 32px);
     margin-left: 16px;
-    font-size: 16px;
   }
 }
